--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,13 @@
-FROM baseImage
-WORKDIR /the/workdir/path
+FROM node:14
+
+WORKDIR /usr/src/app
+
+COPY package.json .
+
 RUN npm install
+
 COPY . .
+
+EXPOSE 3000
+
+CMD ["npm" , "start"]
