--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.7"
 
 services:
   app:
-    container_name: frontend
+    container_name: frontend1
     build: .
     ports:
       - 3000:3000
   api:
-    container_name: backend
+    container_name: backend1
     hostname: api
     build: ./backend
     restart: always
